--- a/App/package.json
+++ b/App/package.json
@@ -22,6 +22,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "tailwindcss": "^3.3.3",
+    "tailwindcss-bg-patterns": "^0.2.0",
     "vite": "^4.4.5"
   }
 }
